--- a/MetricsOnValidationSet_retweet_comment.ipynb
+++ b/MetricsOnValidationSet_retweet_comment.ipynb
@@ -348,6 +348,122 @@
    "source": [
     "rce"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/fm/retweet_comment/val_set_gt.csv',\\\n",
+    " names = ['retweet_with_comment_bool'])\n",
+    "gt = list(gt_df.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/fm/retweet_comment/val_set_result_sgd.csv',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.013225227393004588"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-95.85547165477108"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/fm/retweet_comment/val_set_gt.csv',\\\n",
+    " names = ['retweet_with_comment_bool'])\n",
+    "gt = list(gt_df.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ffm/retweet_comment/val_set.output',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015937006886162106"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1160.5403395718363"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
   }
  ],
  "metadata": {
