--- a/classification_type_models/ffm_basefile.ipynb
+++ b/classification_type_models/ffm_basefile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/base_val_set_subset_columns.csv.libfm'\\\n",
+    "                  , sep = ' ', header = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/base_train_set_subset_columns.csv.libfm'\\\n",
+    "                  , sep = ' ', header = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,215 +69,74 @@
        "      <th></th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>24</th>\n",
-       "      <th>25</th>\n",
-       "      <th>26</th>\n",
-       "      <th>27</th>\n",
-       "      <th>28</th>\n",
-       "      <th>29</th>\n",
-       "      <th>30</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0:0.0001234012708082405</td>\n",
-       "      <td>1:0.0002734405568113233</td>\n",
-       "      <td>2:0.0002523728105810482</td>\n",
-       "      <td>3:0.00031770513992816367</td>\n",
-       "      <td>4:1</td>\n",
-       "      <td>28:1</td>\n",
-       "      <td>1156676:1</td>\n",
-       "      <td>7:1</td>\n",
-       "      <td>8:1</td>\n",
-       "      <td>9:1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>43051846:-0.05626819</td>\n",
-       "      <td>43051847:0.06960201</td>\n",
-       "      <td>43051848:0.12981407</td>\n",
-       "      <td>43051849:-0.11216295</td>\n",
-       "      <td>43051850:0.06983212</td>\n",
-       "      <td>43051851:-0.04793048</td>\n",
-       "      <td>43051852:0.09005226</td>\n",
-       "      <td>43051853:-0.0442683</td>\n",
-       "      <td>43051854:-0.04335065</td>\n",
-       "      <td>43051855:0.02109538</td>\n",
+       "      <td>671752:1</td>\n",
+       "      <td>3:1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0:1.6376782711280126e-06</td>\n",
-       "      <td>1:2.2486887895668035e-05</td>\n",
-       "      <td>2:1.2780465123420906e-06</td>\n",
-       "      <td>3:0.0005065248892009954</td>\n",
-       "      <td>18:1</td>\n",
-       "      <td>11:1</td>\n",
-       "      <td>11264442:1</td>\n",
-       "      <td>7:1</td>\n",
-       "      <td>68:1</td>\n",
-       "      <td>9:1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>43051846:-0.0214576</td>\n",
-       "      <td>43051847:0.17356129</td>\n",
-       "      <td>43051848:0.08901998</td>\n",
-       "      <td>43051849:-0.04970511</td>\n",
-       "      <td>43051850:-0.13525575</td>\n",
-       "      <td>43051851:0.088479</td>\n",
-       "      <td>43051852:0.04221152</td>\n",
-       "      <td>43051853:0.15015069</td>\n",
-       "      <td>43051854:-0.02635316</td>\n",
-       "      <td>43051855:-0.02914606</td>\n",
+       "      <td>17572286:1</td>\n",
+       "      <td>3:1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0:0.0022172304804927686</td>\n",
-       "      <td>1:2.2486887895668036e-07</td>\n",
-       "      <td>2:1.4711326760772265e-07</td>\n",
-       "      <td>3:5.091768519716813e-05</td>\n",
-       "      <td>4:1</td>\n",
-       "      <td>692:1</td>\n",
-       "      <td>5130137:1</td>\n",
-       "      <td>7:1</td>\n",
-       "      <td>40578727:1</td>\n",
-       "      <td>9:1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>43051846:0.01947093</td>\n",
-       "      <td>43051847:0.09459408</td>\n",
-       "      <td>43051848:0.14431453</td>\n",
-       "      <td>43051849:-0.11919845</td>\n",
-       "      <td>43051850:0.09753449</td>\n",
-       "      <td>43051851:0.01966337</td>\n",
-       "      <td>43051852:0.05428404</td>\n",
-       "      <td>43051853:0.02239436</td>\n",
-       "      <td>43051854:-0.04651621</td>\n",
-       "      <td>43051855:-0.05561364</td>\n",
+       "      <td>9296036:1</td>\n",
+       "      <td>3:1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0:4.558942214221224e-06</td>\n",
-       "      <td>1:9.129676485641223e-05</td>\n",
-       "      <td>2:4.229506443722027e-06</td>\n",
-       "      <td>3:0.0003670316474629203</td>\n",
-       "      <td>18:1</td>\n",
-       "      <td>28:1</td>\n",
-       "      <td>9836490:1</td>\n",
-       "      <td>7:1</td>\n",
-       "      <td>17105461:1</td>\n",
-       "      <td>9:1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>43051846:-0.04343078</td>\n",
-       "      <td>43051847:0.08864199</td>\n",
-       "      <td>43051848:0.07214902</td>\n",
-       "      <td>43051849:-0.07493012</td>\n",
-       "      <td>43051850:-0.01761118</td>\n",
-       "      <td>43051851:0.01256902</td>\n",
-       "      <td>43051852:0.04606753</td>\n",
-       "      <td>43051853:0.0957064</td>\n",
-       "      <td>43051854:0.02221157</td>\n",
-       "      <td>43051855:-0.06187038</td>\n",
+       "      <td>2747005:1</td>\n",
+       "      <td>3:1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0:0.00017328406571530186</td>\n",
-       "      <td>1:6.138920395517375e-05</td>\n",
-       "      <td>2:4.303063077525887e-06</td>\n",
-       "      <td>3:0.0020345858376701765</td>\n",
-       "      <td>4:1</td>\n",
-       "      <td>28:1</td>\n",
-       "      <td>160501:1</td>\n",
-       "      <td>26:1</td>\n",
-       "      <td>40578728:1</td>\n",
-       "      <td>9:1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>43051846:0.08058062</td>\n",
-       "      <td>43051847:0.16249385</td>\n",
-       "      <td>43051848:0.09627721</td>\n",
-       "      <td>43051849:-0.03884041</td>\n",
-       "      <td>43051850:0.01686073</td>\n",
-       "      <td>43051851:-0.10672417</td>\n",
-       "      <td>43051852:0.01018554</td>\n",
-       "      <td>43051853:0.00296804</td>\n",
-       "      <td>43051854:0.00401122</td>\n",
-       "      <td>43051855:-0.06140752</td>\n",
+       "      <td>3469245:1</td>\n",
+       "      <td>3:1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         0                         1   \\\n",
-       "0   0:0.0001234012708082405   1:0.0002734405568113233   \n",
-       "1  0:1.6376782711280126e-06  1:2.2486887895668035e-05   \n",
-       "2   0:0.0022172304804927686  1:2.2486887895668036e-07   \n",
-       "3   0:4.558942214221224e-06   1:9.129676485641223e-05   \n",
-       "4  0:0.00017328406571530186   1:6.138920395517375e-05   \n",
-       "\n",
-       "                         2                         3     4      5   \\\n",
-       "0   2:0.0002523728105810482  3:0.00031770513992816367   4:1   28:1   \n",
-       "1  2:1.2780465123420906e-06   3:0.0005065248892009954  18:1   11:1   \n",
-       "2  2:1.4711326760772265e-07   3:5.091768519716813e-05   4:1  692:1   \n",
-       "3   2:4.229506443722027e-06   3:0.0003670316474629203  18:1   28:1   \n",
-       "4   2:4.303063077525887e-06   3:0.0020345858376701765   4:1   28:1   \n",
-       "\n",
-       "           6     7           8    9   ...                    21  \\\n",
-       "0   1156676:1   7:1         8:1  9:1  ...  43051846:-0.05626819   \n",
-       "1  11264442:1   7:1        68:1  9:1  ...   43051846:-0.0214576   \n",
-       "2   5130137:1   7:1  40578727:1  9:1  ...   43051846:0.01947093   \n",
-       "3   9836490:1   7:1  17105461:1  9:1  ...  43051846:-0.04343078   \n",
-       "4    160501:1  26:1  40578728:1  9:1  ...   43051846:0.08058062   \n",
-       "\n",
-       "                    22                   23                    24  \\\n",
-       "0  43051847:0.06960201  43051848:0.12981407  43051849:-0.11216295   \n",
-       "1  43051847:0.17356129  43051848:0.08901998  43051849:-0.04970511   \n",
-       "2  43051847:0.09459408  43051848:0.14431453  43051849:-0.11919845   \n",
-       "3  43051847:0.08864199  43051848:0.07214902  43051849:-0.07493012   \n",
-       "4  43051847:0.16249385  43051848:0.09627721  43051849:-0.03884041   \n",
-       "\n",
-       "                     25                    26                   27  \\\n",
-       "0   43051850:0.06983212  43051851:-0.04793048  43051852:0.09005226   \n",
-       "1  43051850:-0.13525575     43051851:0.088479  43051852:0.04221152   \n",
-       "2   43051850:0.09753449   43051851:0.01966337  43051852:0.05428404   \n",
-       "3  43051850:-0.01761118   43051851:0.01256902  43051852:0.04606753   \n",
-       "4   43051850:0.01686073  43051851:-0.10672417  43051852:0.01018554   \n",
-       "\n",
-       "                    28                    29                    30  \n",
-       "0  43051853:-0.0442683  43051854:-0.04335065   43051855:0.02109538  \n",
-       "1  43051853:0.15015069  43051854:-0.02635316  43051855:-0.02914606  \n",
-       "2  43051853:0.02239436  43051854:-0.04651621  43051855:-0.05561364  \n",
-       "3   43051853:0.0957064   43051854:0.02221157  43051855:-0.06187038  \n",
-       "4  43051853:0.00296804   43051854:0.00401122  43051855:-0.06140752  \n",
-       "\n",
-       "[5 rows x 31 columns]"
+       "            0    1\n",
+       "0    671752:1  3:1\n",
+       "1  17572286:1  3:1\n",
+       "2   9296036:1  3:1\n",
+       "3   2747005:1  3:1\n",
+       "4   3469245:1  3:1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.head()"
+    "val.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "133267714"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "base_test = pd.DataFrame({col:str(int(col))+':' for col in test}, index=test.index) + test.astype(str) "
+    "len(train)"
    ]
   },
   {
@@ -266,7 +145,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_test.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/base_test.csv',\\\n",
+    "base_val = pd.DataFrame({col:str(int(col))+':' for col in val}, index=val.index) + val.astype(str) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_train = pd.DataFrame({col:str(int(col))+':' for col in train}, index=train.index) + train.astype(str) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0:671752:1</td>\n",
+       "      <td>1:3:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0:17572286:1</td>\n",
+       "      <td>1:3:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0:9296036:1</td>\n",
+       "      <td>1:3:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0:2747005:1</td>\n",
+       "      <td>1:3:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0:3469245:1</td>\n",
+       "      <td>1:3:1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              0      1\n",
+       "0    0:671752:1  1:3:1\n",
+       "1  0:17572286:1  1:3:1\n",
+       "2   0:9296036:1  1:3:1\n",
+       "3   0:2747005:1  1:3:1\n",
+       "4   0:3469245:1  1:3:1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_val.head(\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_val.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ffm/base_val_set.csv',\\\n",
+    "                index = False, header = False, sep = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_train.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ffm/base_train_set.csv',\\\n",
     "                index = False, header = False, sep = ' ')"
    ]
   },
@@ -276,7 +262,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunksize = 10 ** 7\n",
+    "\n",
+    "base_val.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/ffm/base_val_set.csv',\\\n",
+    "                index = False, header = False, sep = ' ')chunksize = 10 ** 7\n",
     "for chunk in pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/ft_embedding_based_features/fm/base_train_extended.csv'\\\n",
     "                  , sep = ' ', header = None\\\n",
     "                 , chunksize=chunksize):\n",
