--- a/classification_type_models/ffm_basefile.ipynb
+++ b/classification_type_models/ffm_basefile.ipynb
@@ -23,22 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/base_val_set_subset_columns.csv.libfm'\\\n",
-    "                  , sep = ' ', header = None)"
+    "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/val_set.libfm'\\\n",
+    "                  , sep = ' ', header = None, usecols= [1,2,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/base_train_set_subset_columns.csv.libfm'\\\n",
-    "                  , sep = ' ', header = None)"
+    "train = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/train_set.libfm'\\\n",
+    "                  , sep = ' ', header = None, usecols= [1,2,3])"
    ]
   },
   {
@@ -141,25 +141,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_val = pd.DataFrame({col:str(int(col) - 1)+':' for col in val}, index=val.index) + val.astype(str) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_train = pd.DataFrame({col:str(int(col) - 1)+':' for col in train}, index=train.index) + train.astype(str) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_val = pd.DataFrame({col:str(int(col))+':' for col in val}, index=val.index) + val.astype(str) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_train = pd.DataFrame({col:str(int(col))+':' for col in train}, index=train.index) + train.astype(str) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,67 +183,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
        "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0:671752:1</td>\n",
-       "      <td>1:3:1</td>\n",
+       "      <td>0:0:1</td>\n",
+       "      <td>1:1:1</td>\n",
+       "      <td>2:40578649:0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0:17572286:1</td>\n",
+       "      <td>0:2:1</td>\n",
        "      <td>1:3:1</td>\n",
+       "      <td>2:40578649:0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0:9296036:1</td>\n",
-       "      <td>1:3:1</td>\n",
+       "      <td>0:4:1</td>\n",
+       "      <td>1:5:1</td>\n",
+       "      <td>2:40578649:0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0:2747005:1</td>\n",
-       "      <td>1:3:1</td>\n",
+       "      <td>0:6:1</td>\n",
+       "      <td>1:7:1</td>\n",
+       "      <td>2:40578649:0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0:3469245:1</td>\n",
-       "      <td>1:3:1</td>\n",
+       "      <td>0:8:1</td>\n",
+       "      <td>1:9:1</td>\n",
+       "      <td>2:40578649:0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              0      1\n",
-       "0    0:671752:1  1:3:1\n",
-       "1  0:17572286:1  1:3:1\n",
-       "2   0:9296036:1  1:3:1\n",
-       "3   0:2747005:1  1:3:1\n",
-       "4   0:3469245:1  1:3:1"
+       "       1      2               3\n",
+       "0  0:0:1  1:1:1  2:40578649:0.0\n",
+       "1  0:2:1  1:3:1  2:40578649:0.0\n",
+       "2  0:4:1  1:5:1  2:40578649:0.0\n",
+       "3  0:6:1  1:7:1  2:40578649:0.0\n",
+       "4  0:8:1  1:9:1  2:40578649:0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "base_val.head(\n",
+    "base_train.head(\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_val.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ffm/base_val_set.csv',\\\n",
-    "                index = False, header = False, sep = ' ')"
    ]
   },
   {
@@ -252,7 +248,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_train.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ffm/base_train_set.csv',\\\n",
+    "base_val.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/val_set.ffm',\\\n",
+    "                index = False, header = False, sep = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_train.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/train_set.ffm',\\\n",
     "                index = False, header = False, sep = ' ')"
    ]
   },
