--- a/MetricsOnValidationSet_retweet_comment.ipynb
+++ b/MetricsOnValidationSet_retweet_comment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,6 +631,64 @@
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ft/val_scratch_gt.csv',\\\n",
+    " names = ['retweet_with_comment_bool'])\n",
+    "gt = list(gt_df.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ft/val_scratch.output',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.021540135337981582"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-11.48399242636453"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
