--- a/classification_type_models/ffm_basefile.ipynb
+++ b/classification_type_models/ffm_basefile.ipynb
@@ -23,21 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/val_set.libfm'\\\n",
+    "val = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ft/val_scratch.csv.libfm'\\\n",
     "                  , sep = ' ', header = None, usecols= [1,2,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/train_set.libfm'\\\n",
+    "train = pd.read_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ft/train_scratch.csv.libfm'\\\n",
     "                  , sep = ' ', header = None, usecols= [1,2,3])"
    ]
   },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,21 +244,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_val.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/val_set.ffm',\\\n",
+    "base_val.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ft/val_set.ffm',\\\n",
     "                index = False, header = False, sep = ' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_train.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/f3/train_set.ffm',\\\n",
+    "base_train.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f2/ft/train_set.ffm',\\\n",
     "                index = False, header = False, sep = ' ')"
    ]
   },
