--- a/handling_large_categorical_data/Untitled1.ipynb
+++ b/handling_large_categorical_data/Untitled1.ipynb
@@ -405,11 +405,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set_ffm"
+    "train_scratch.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f3/train_scratch.csv', sep = '\\t', index = False)\n",
+    "val_scratch.to_csv('/home/ubuntu/recsys_challenge_2020/classification_type_models/f3/val_scratch.csv', sep = '\\t', index = False)"
    ]
   },
   {
