ffm retweet comment

--- a/MetricsOnValidationSet_retweet_comment.ipynb
+++ b/MetricsOnValidationSet_retweet_comment.ipynb
@@ -696,6 +696,64 @@
    "source": [
     "rce"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f3/val_set_gt.csv',\\\n",
+    " names = ['retweet_with_comment_bool'])\n",
+    "gt = list(gt_df.retweet_with_comment_bool)\n",
+    "pr_df = pd.read_csv\\\n",
+    "('/home/ubuntu/recsys_challenge_2020/classification_type_models/f3/val_set.output',\\\n",
+    "                      names = ['probability_retweet_with_comment'])\n",
+    "pr = list(pr_df.probability_retweet_with_comment)\n",
+    "prauc = metrics.compute_prauc(pr,gt)\n",
+    "rce = metrics.compute_rce(pr,gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04709861303097562"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prauc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.067043056299726"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce"
+   ]
   }
  ],
  "metadata": {
