--- a/handling_large_categorical_data/using_hash_vectorizer.ipynb
+++ b/handling_large_categorical_data/using_hash_vectorizer.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +76,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_type</th>\n",
+       "      <th>language</th>\n",
+       "      <th>tweet_timestamp</th>\n",
+       "      <th>enaged_with_user_id</th>\n",
+       "      <th>engaged_with_user_follower_count</th>\n",
+       "      <th>engaged_with_user_following_count</th>\n",
+       "      <th>enaging_user_id</th>\n",
+       "      <th>enaging_user_follower_count</th>\n",
+       "      <th>enaging_user_following_count</th>\n",
+       "      <th>engagee_follows_engager</th>\n",
+       "      <th>reply_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TopLevel</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581258144</td>\n",
+       "      <td>D7EFC6D19CFB09B9A1CE4C4B0E0091F6</td>\n",
+       "      <td>3517</td>\n",
+       "      <td>590</td>\n",
+       "      <td>0000006C3074607050F1339DDCB890BB</td>\n",
+       "      <td>27428</td>\n",
+       "      <td>600</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TopLevel</td>\n",
+       "      <td>B9175601E87101A984A50F8A62A1C374</td>\n",
+       "      <td>1581018910</td>\n",
+       "      <td>1F30A85E612A24B426013978ADB7AE46</td>\n",
+       "      <td>39786</td>\n",
+       "      <td>32978</td>\n",
+       "      <td>000005C520010F8917EEAB6F5B6EC1C4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>77</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TopLevel</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581244866</td>\n",
+       "      <td>9E1FD934C376903895DEEBCC0F6AB920</td>\n",
+       "      <td>141726</td>\n",
+       "      <td>3232</td>\n",
+       "      <td>000006829BEADA9EEA695CF0C334B426</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TopLevel</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1581250124</td>\n",
+       "      <td>BEB3C337B266E2C4769065AD64724329</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>99</td>\n",
+       "      <td>000006829BEADA9EEA695CF0C334B426</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TopLevel</td>\n",
+       "      <td>22C448FF81263D4BAF2A176145EE9EAD</td>\n",
+       "      <td>1580958805</td>\n",
+       "      <td>9E1FD934C376903895DEEBCC0F6AB920</td>\n",
+       "      <td>141370</td>\n",
+       "      <td>3235</td>\n",
+       "      <td>000006829BEADA9EEA695CF0C334B426</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  tweet_type                          language  tweet_timestamp  \\\n",
+       "0   TopLevel  22C448FF81263D4BAF2A176145EE9EAD       1581258144   \n",
+       "1   TopLevel  B9175601E87101A984A50F8A62A1C374       1581018910   \n",
+       "2   TopLevel  22C448FF81263D4BAF2A176145EE9EAD       1581244866   \n",
+       "3   TopLevel  22C448FF81263D4BAF2A176145EE9EAD       1581250124   \n",
+       "4   TopLevel  22C448FF81263D4BAF2A176145EE9EAD       1580958805   \n",
+       "\n",
+       "                enaged_with_user_id  engaged_with_user_follower_count  \\\n",
+       "0  D7EFC6D19CFB09B9A1CE4C4B0E0091F6                              3517   \n",
+       "1  1F30A85E612A24B426013978ADB7AE46                             39786   \n",
+       "2  9E1FD934C376903895DEEBCC0F6AB920                            141726   \n",
+       "3  BEB3C337B266E2C4769065AD64724329                              3044   \n",
+       "4  9E1FD934C376903895DEEBCC0F6AB920                            141370   \n",
+       "\n",
+       "   engaged_with_user_following_count                   enaging_user_id  \\\n",
+       "0                                590  0000006C3074607050F1339DDCB890BB   \n",
+       "1                              32978  000005C520010F8917EEAB6F5B6EC1C4   \n",
+       "2                               3232  000006829BEADA9EEA695CF0C334B426   \n",
+       "3                                 99  000006829BEADA9EEA695CF0C334B426   \n",
+       "4                               3235  000006829BEADA9EEA695CF0C334B426   \n",
+       "\n",
+       "   enaging_user_follower_count  enaging_user_following_count  \\\n",
+       "0                        27428                           600   \n",
+       "1                           17                            77   \n",
+       "2                            2                            29   \n",
+       "3                            3                            30   \n",
+       "4                            3                            30   \n",
+       "\n",
+       "   engagee_follows_engager  reply_timestamp  \n",
+       "0                    False              NaN  \n",
+       "1                     True              NaN  \n",
+       "2                    False              NaN  \n",
+       "3                    False              NaN  \n",
+       "4                    False              NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "training.head()"
    ]
@@ -87,7 +238,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb0f1e8c0a9c4e99b474130c236ac4ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Pandas Apply', max=148075238.0, style=ProgressStyle(descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "training['day'] = training.swifter.apply(lambda x: ep_to_day(x['tweet_timestamp']), axis = 1)"
    ]
