--- a/competetion_submission_phase/ffm2fm.ipynb
+++ b/competetion_submission_phase/ffm2fm.ipynb
@@ -175,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41647edc9d7447068123cd4928879dde",
+       "model_id": "21e3dd5e085c4209aa41414dfd037631",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,6 +196,162 @@
    ],
    "source": [
     "test_df = test.swifter.apply(lambda s: s.str.replace('^\\d+:', ''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1:1.0445731675303e-06</td>\n",
+       "      <td>2:2.8108609869585045e-05</td>\n",
+       "      <td>3:1.02096493548357e-06</td>\n",
+       "      <td>4:0.0003559286214810339</td>\n",
+       "      <td>5:1</td>\n",
+       "      <td>8:1</td>\n",
+       "      <td>9285322:1</td>\n",
+       "      <td>15702463:1</td>\n",
+       "      <td>15702468:1</td>\n",
+       "      <td>42963993:1</td>\n",
+       "      <td>42963996:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1:1.6642352160652236e-06</td>\n",
+       "      <td>2:5.936538404456362e-05</td>\n",
+       "      <td>3:1.02096493548357e-06</td>\n",
+       "      <td>4:0.0003559286214810339</td>\n",
+       "      <td>6:1</td>\n",
+       "      <td>8:1</td>\n",
+       "      <td>3367747:1</td>\n",
+       "      <td>15702463:1</td>\n",
+       "      <td>15702468:1</td>\n",
+       "      <td>42963993:1</td>\n",
+       "      <td>42963996:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1:3.816232987477223e-05</td>\n",
+       "      <td>2:0.00014841346011140903</td>\n",
+       "      <td>3:1.0577564646901852e-05</td>\n",
+       "      <td>4:2.489381727620326e-05</td>\n",
+       "      <td>6:1</td>\n",
+       "      <td>11:1</td>\n",
+       "      <td>598658:1</td>\n",
+       "      <td>15702463:1</td>\n",
+       "      <td>15702472:1</td>\n",
+       "      <td>42963993:1</td>\n",
+       "      <td>42963996:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1:2.3989773593280617e-06</td>\n",
+       "      <td>2:4.160074260698587e-05</td>\n",
+       "      <td>3:7.183546077591606e-06</td>\n",
+       "      <td>4:0.00023357815784692845</td>\n",
+       "      <td>6:1</td>\n",
+       "      <td>13:1</td>\n",
+       "      <td>1678849:1</td>\n",
+       "      <td>15702463:1</td>\n",
+       "      <td>15702475:1</td>\n",
+       "      <td>42963993:1</td>\n",
+       "      <td>42963996:1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1:9.020508963672675e-06</td>\n",
+       "      <td>2:0.00047155003917215873</td>\n",
+       "      <td>3:1.3796823452480677e-07</td>\n",
+       "      <td>4:6.461799378078293e-05</td>\n",
+       "      <td>6:1</td>\n",
+       "      <td>11:1</td>\n",
+       "      <td>5602018:1</td>\n",
+       "      <td>15702463:1</td>\n",
+       "      <td>41198553:1</td>\n",
+       "      <td>42963993:1</td>\n",
+       "      <td>42963995:1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         1                         2   \\\n",
+       "0     1:1.0445731675303e-06  2:2.8108609869585045e-05   \n",
+       "1  1:1.6642352160652236e-06   2:5.936538404456362e-05   \n",
+       "2   1:3.816232987477223e-05  2:0.00014841346011140903   \n",
+       "3  1:2.3989773593280617e-06   2:4.160074260698587e-05   \n",
+       "4   1:9.020508963672675e-06  2:0.00047155003917215873   \n",
+       "\n",
+       "                         3                         4    5     6          7   \\\n",
+       "0    3:1.02096493548357e-06   4:0.0003559286214810339  5:1   8:1  9285322:1   \n",
+       "1    3:1.02096493548357e-06   4:0.0003559286214810339  6:1   8:1  3367747:1   \n",
+       "2  3:1.0577564646901852e-05   4:2.489381727620326e-05  6:1  11:1   598658:1   \n",
+       "3   3:7.183546077591606e-06  4:0.00023357815784692845  6:1  13:1  1678849:1   \n",
+       "4  3:1.3796823452480677e-07   4:6.461799378078293e-05  6:1  11:1  5602018:1   \n",
+       "\n",
+       "           8           9           10          11  \n",
+       "0  15702463:1  15702468:1  42963993:1  42963996:1  \n",
+       "1  15702463:1  15702468:1  42963993:1  42963996:1  \n",
+       "2  15702463:1  15702472:1  42963993:1  42963996:1  \n",
+       "3  15702463:1  15702475:1  42963993:1  42963996:1  \n",
+       "4  15702463:1  41198553:1  42963993:1  42963995:1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.to_csv('/home/ubuntu/recsys_challenge_2020/competetion_submission_phase/data/like/test_basefile.libfm', sep = ' '\\\n",
+    "                  ,header = None, index = False)"
    ]
   },
   {
